--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@ a:hover, a:focus, .pagination > li > a:hover, .pagination > li > span:hover { co
 .btn-primary { background-color: rgba(197,14,31,1); border-color: rgba(217,14,31,1); }
 .btn-primary:hover, .btn-primary:focus { background-color: rgba(167,14,31,1); border-color: rgba(187,14,31,1); }
 
+.dropdown-menu { min-width: 91px; }
+.dropdown-menu a { text-align: center; }
+
 .progress-bar {
   background-image: -webkit-linear-gradient(top, #d90e1f 0%, #c50e1f 100%);
   background-image:      -o-linear-gradient(top, #d90e1f 0%, #c50e1f 100%);
@@ -12,9 +15,5 @@ a:hover, a:focus, .pagination > li > a:hover, .pagination > li > span:hover { co
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd90e1f', endColorstr='#ffc50e1f', GradientType=0);
   background-repeat: repeat-x;
 }
-
-.bg-green { background-color: #dff0d8; }
-.bg-yellow { background-color: #fcf8e3; }
-.bg-red { background-color: #f2dede; }
 
 .copy { font-size: 10px; }
