--- a/PPSN_2_DO/todo/templates/todo/createEntry.html
+++ b/PPSN_2_DO/todo/templates/todo/createEntry.html
@@ -45,10 +45,10 @@
       <div class="col-xs-6 col-sm-4 form-group">
         <label for="statSelect">Status</label>
         <select class="form-control" id="statSelect" name="status">
-          <option>in progress</option>
-          <option>done</option>
-          <option>important</option>
-          <option>cancelled</option>
+          <option value="in progress">Select status</option>
+          <option value="done">Task is done.</option>
+          <option value="important">Task is important.</option>
+          <option value="cancelled">Task is cancelled.</option>
         </select>
       </div>
       <div class="col-xs-12 form-group">
