--- a/PPSN_2_DO/todo/templates/todo/index.html
+++ b/PPSN_2_DO/todo/templates/todo/index.html
@@ -48,7 +48,6 @@
     </div>
   </nav>
   <div class="row" id="content">
-  {{ task_count }} {{ list_count }} {{ page_count }} {{ page_current }}
   {% if info_message %}<p class="success text-center text-success"><strong>{{ info_message }}</strong></p>{% endif %}
   {% if latest_task_list %}
     <table class="table table-striped table-hover" id="toDoList">
@@ -90,12 +89,11 @@
     </table>
   </div>
   <footer class="row text-center">
-  	{{ page }}
   	{% if pages > 1 %}
     <nav class="col-xs-12">
       <ul class="pagination" style="margin-top: 0 !important;">
         {% for i in page_count %}
-        <li{% if i == page %} class="active"{% endif %}>
+        <li{% if i == 0 and page < 1 or i == page %} class="active"{% endif %}>
         	<a href="{% url 'todo:index' %}?page={{ i|add:'1' }}&list_count={% if list_count == 0 %}All{% else %}{{ list_count }}{% endif %}+entries">{{ i|add:'1' }}</a>
         {% endfor %}
       </ul>
