--- a/PPSN_2_DO/todo/templates/todo/index.html
+++ b/PPSN_2_DO/todo/templates/todo/index.html
@@ -31,7 +31,7 @@
   <nav class="row" style="margin-bottom: 15px; padding-right: 0px;">
     <form action="{% url 'todo:index' %}" method="GET" class="pull-left" role="search">
       <div class="form-group pull-left">
-        <input type="text" class="form-control" placeholder="Search">
+        <input id="searchInput" name="search" type="text" class="form-control" placeholder="Search">
       </div>
       <button type="submit" class="btn btn-primary pull-left">Go</button>
     </form>
@@ -49,7 +49,7 @@
   </nav>
   <div class="row" id="content">
   {% if info_message %}<p class="success text-center text-success"><strong>{{ info_message }}</strong></p>{% endif %}
-  {% if latest_task_list %}
+  {% if task_list %}
     <table class="table table-striped table-hover" id="toDoList">
       <tr>
         <th>Date</th>
@@ -58,7 +58,7 @@
         <th>Edit</th>
         <th>Delete</th>
       </tr>
-      {% for task in latest_task_list %}
+      {% for task in task_list %}
       {% if task.task_status == "C" %}<tr class="danger">
       {% elif task.task_status == "D" %}<tr class="success">
       {% elif task.task_status == "I" %}<tr class="warning">
@@ -89,7 +89,10 @@
     </table>
   </div>
   <footer class="row text-center">
-  	{% if pages > 1 %}
+  	{% for s in search_list %}
+    	{{ s }}
+    {% endfor %}
+    {% if pages > 1 %}
     <nav class="col-xs-12">
       <ul class="pagination" style="margin-top: 0 !important;">
         {% for i in page_count %}
