--- a/PPSN_2_DO/todo/static/todo/css/style.css
+++ b/PPSN_2_DO/todo/static/todo/css/style.css
@@ -19,6 +19,12 @@ a:hover, a:focus,
 	display: inline-block; width: auto;
 	border-top-right-radius: 0px; border-bottom-right-radius: 0px;
 }
+.form-control:focus {
+  border-color: rgba(217,14,31,1);
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(217,14,31, .6);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(217,14,31, .6);
+}
 
 .progress-bar {
   background-image: -webkit-linear-gradient(top, #d90e1f 0%, #c50e1f 100%);
