--- a/PPSN_2_DO/todo/templates/todo/index.html
+++ b/PPSN_2_DO/todo/templates/todo/index.html
@@ -29,7 +29,7 @@
     </nav>
   </header>
   <nav class="row" style="margin-bottom: 15px; padding-right: 0px;">
-    <form action="{% url 'todo:index' %}" method="GET" class="pull-left" role="search">
+    <form action="{% url 'todo:index' %}" method="GET" class="pull-left">
       <div class="form-group pull-left">
         <input id="searchInput" name="search" type="text" class="form-control" placeholder="Search">
       </div>
@@ -89,16 +89,13 @@
     </table>
   </div>
   <footer class="row text-center">
-  	{% for s in search_list %}
-    	{{ s }}
-    {% endfor %}
     {% if pages > 1 %}
     <nav class="col-xs-12">
       <ul class="pagination" style="margin-top: 0 !important;">
         {% for i in page_count %}
         <li{% if i == 0 and page < 1 or i == page %} class="active"{% endif %}>
         	<a href="{% url 'todo:index' %}?page={{ i|add:'1' }}&list_count={% if list_count == 0 %}All{% else %}{{ list_count }}{% endif %}+entries">{{ i|add:'1' }}</a>
-        {% endfor %}
+        {% endfor %} 
       </ul>
     </nav>
     {% endif %}
