--- a/PPSN_2_DO/todo/static/todo/css/style.css
+++ b/PPSN_2_DO/todo/static/todo/css/style.css
@@ -12,10 +12,10 @@ a:hover, a:focus,
 .btn-primary:hover, .btn-primary:focus,
 .pagination .active a:hover { background-color: rgba(167,14,31,1); border-color: rgba(187,14,31,1); }
 
-.list-control button {
+.searchForm button, .list-control button {
 	border-top-left-radius: 0px; border-bottom-left-radius: 0px;
 }
-.list-control .form-control {
+.searchForm input, .list-control .form-control {
 	display: inline-block; width: auto;
 	border-top-right-radius: 0px; border-bottom-right-radius: 0px;
 }
@@ -35,6 +35,7 @@ a:hover, a:focus,
   background-repeat: repeat-x;
 }
 
+.table th:nth-of-type(1) { white-space: nowrap; }
 .table th:nth-of-type(4), 
 .table th:nth-of-type(5) { width: 60px; }
 
