--- a/PPSN_2_DO/todo/templates/todo/index.html
+++ b/PPSN_2_DO/todo/templates/todo/index.html
@@ -29,7 +29,7 @@
     </nav>
   </header>
   <nav class="row" style="margin-bottom: 15px; padding-right: 0px;">
-    <form action="{% url 'todo:index' %}" method="GET" class="pull-left">
+    <form action="{% url 'todo:index' %}" method="GET" class="searchForm pull-left">
       <div class="form-group pull-left">
         <input id="searchInput" name="search" type="text" class="form-control" placeholder="Search">
       </div>
@@ -37,7 +37,7 @@
     </form>
     <div class="btn-group pull-right">
       <form action="{% url 'todo:index' %}" method="GET" class="list-control">
-          <button type="submit" class="btn btn-default pull-right"><span class="glyphicon glyphicon-eye-open"></span></button>
+          <button type="submit" class="btn btn-primary pull-right"><span class="glyphicon glyphicon-eye-open"></span></button>
           <select class="form-control pull-right" id="listSelect" name="list_count">
               <option{% if list_count == 5 %} selected{% endif %}>5 entries</option>
               <option{% if list_count == 10 %} selected{% endif %}>10 entries</option>
@@ -49,7 +49,7 @@
   </nav>
   <div class="row" id="content">
   {% if info_message %}<p class="success text-center text-success"><strong>{{ info_message }}</strong></p>{% endif %}
-  {% if task_list %}
+  {% if warn_message %}<p class="danger text-center text-danger"><strong>{{ warn_message }}</strong></p>{% endif %}
     <table class="table table-striped table-hover" id="toDoList">
       <tr>
         <th>Date</th>
@@ -58,25 +58,26 @@
         <th>Edit</th>
         <th>Delete</th>
       </tr>
+    {% if task_list %}
       {% for task in task_list %}
       {% if task.task_status == "C" %}<tr class="danger">
       {% elif task.task_status == "D" %}<tr class="success">
       {% elif task.task_status == "I" %}<tr class="warning">
       {% else %}<tr>
       {% endif %}
-        <td>{{ task.task_deadline }}</td>
+        <td>{{ task.task_deadline|date:"d F Y" }}</td>
         <td>{{ task.task_desc }}</td>
         <td><div class="progress">
             <div class="progress-bar" style="min-width: 10%; width: {{ task.task_progress }}%;{% if task.task_progress <= 10 %}color: rgba(0,0,0,1);{% endif %}">{{ task.task_progress }}%</div>
           </div></td>
         <td><button type="button" class="btn btn-primary btn-xs btn-block" onclick="location.href = '{% url 'todo:edit' task.id %}'"><span class="glyphicon glyphicon-pencil"></span></button></td>
-        <td><button type="button" class="btn btn-default btn-xs btn-block" onclick="location.href = '{% url 'todo:delete' task.id %}'"><span class="glyphicon glyphicon-trash"></span></button></td>
+        <td><button type="button" class="btn btn-default btn-xs btn-block" data-toggle="modal" data-target="#delPopup{{ task.id }}"><span class="glyphicon glyphicon-trash"></span></button></td>
       </tr>
       {% endfor %}
-    </table>
   {% else %}
-  	No further tasks to complete.
+  	<tr><td colspan="6" class="text-center">No further tasks to complete.</td></tr>
   {% endif %}
+    </table>
     <table class="table table-striped text-center">
       <tr>
         <th colspan="3">Legend</th>
@@ -110,9 +111,29 @@
       <br>
       2015 Technische Universit&auml;t Berlin<br>
       &times; CIT Programmierpraktikum &times;<br>
-      T. Tietz, K. Schmidt</p>
+      T. Tietz, K. Schmidt</p><br>
   </footer>
 </div>
+{% for task in task_list %}
+<div class="modal fade" id="delPopup{{ task.id }}" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Delete task for {{ task.task_deadline }}?</h4>
+      </div>
+      <div class="modal-body">{{ task.task_desc }}</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <form class="pull-right">
+        	<input type="hidden" name="delete" value="{{ task.id }}">
+        	<button type="submit" class="btn btn-primary">Delete</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
 <script src="{% static 'todo/js/bootstrap.js' %}" type="text/javascript"></script> 
