--- a/PPSN_2_DO/todo/templates/todo/createEntry.html
+++ b/PPSN_2_DO/todo/templates/todo/createEntry.html
@@ -45,7 +45,7 @@
       <div class="col-xs-6 col-sm-4 form-group">
         <label for="statSelect">Status</label>
         <select class="form-control" id="statSelect" name="status">
-          <option value="in progress">Select status</option>
+          <option value="in progress">Task is in progress.</option>
           <option value="done">Task is done.</option>
           <option value="important">Task is important.</option>
           <option value="cancelled">Task is cancelled.</option>
