--- a/PPSN_2_DO/todo/templates/todo/index.html
+++ b/PPSN_2_DO/todo/templates/todo/index.html
@@ -75,7 +75,7 @@
       </tr>
       {% endfor %}
   {% else %}
-  	<tr><td colspan="6" class="text-center">No further tasks to complete.</td></tr>
+  	<tr><td colspan="6" class="text-center">0 tasks found. Nothing to do ... for now!</td></tr>
   {% endif %}
     </table>
     <table class="table table-striped text-center">
