--- a/PPSN_2_DO/todo/templates/todo/editEntry.html
+++ b/PPSN_2_DO/todo/templates/todo/editEntry.html
@@ -44,7 +44,7 @@
       <div class="col-xs-6 col-sm-4 form-group">
         <label for="statSelect">Status</label>
         <select class="form-control" id="statSelect" name="status">
-          <option{% if task.task_status == 'R' %} selected{% endif %}>Select status</option>
+          <option{% if task.task_status == 'R' %} selected{% endif %}>running</option>
           <option{% if task.task_status == 'D' %} selected{% endif %}>done</option>
           <option{% if task.task_status == 'I' %} selected{% endif %}>important</option>
           <option{% if task.task_status == 'C' %} selected{% endif %}>cancelled</option>
